--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             {/* 標題條 */}
                             <div className="bg-emerald-700 text-white py-4 px-6 md:px-8 flex flex-col md:flex-row justify-between items-center">
                                 <div>
-                                    <h1 className="text-2xl md:text-3xl font-bold tracking-wide">深耕執行會議日程儀表板</h1>
+                                    <h1 className="text-2xl md:text-3xl font-bold tracking-wide">深耕執行會議日程</h1>
                                     <p className="text-emerald-100 text-sm mt-1 opacity-90">Deep Cultivation Execution Meeting Schedule</p>
                                 </div>
                                 <div className="mt-4 md:mt-0 flex items-center space-x-4 bg-emerald-800 bg-opacity-50 px-4 py-2 rounded-lg backdrop-blur-sm border border-emerald-600">
